dhall/tests/type-errors/unit/RecordSelectionNotPresent.txt
Type error: error: MissingRecordField
 --> <current file>:1:0
  |
1 | { y = {=} }.x
  | ^^^^^^^^^^^^^ MissingRecordField
  |
